client/src/components/PageComponents/game/yodel/Yodel.module.css
.scene{
    display: flex;
    position: relative;
    flex-direction: column;
    justify-content: space-between;
    height: 65vh;
    align-items: center;
}

.head{
    display: flex;
}

.title{
    border-radius: 15px;
    font-size: 2rem;
    text-align: center;
    padding: 1rem;
    margin-bottom: 1rem;
}

.buttonDiv{
    position: absolute;
    top: 30px;
    right: 5vw;
}

.information{
    font-size: 1rem;
    margin: 0.5rem;
    padding: 0.5rem 1rem;
}

.edit{
    font-size: 1rem;
    margin: 0.5rem;
    padding: 0.5rem 1rem;
    background-color: darkgreen;
}

.container{
    display: flex;
    flex-direction: column;
    gap:5px;
    padding: 1rem;
}

.row{
    display: flex;
    flex-direction: row;
    gap:5px;
}

.box{
    text-transform: uppercase;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 32px;
    font-weight: 700;
    width: 60px;
    height: 60px;
    border: 2px solid #fbfdff;
    background: #8c8f92;
}

.results{
    display: flex;
    flex-direction: row;
    gap:5px;
    margin-left: 0.75rem;
    color: black;
}

.yodel{
    text-transform: uppercase;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 32px;
    font-weight: 700;
    width: 60px;
    height: 60px;
    border: 2px solid #fbfdff;
    background: #8c8f92;
}

.echo{
    text-transform: uppercase;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 32px;
    font-weight: 700;
    width: 60px;
    height: 60px;
    border: 2px solid #fbfdff;
    background: #8c8f92;
}

.refresh{
    background-color: darkgreen;
    font-size: 1.5rem;
}

